Logo streched #466 Have fixed the home page stretched logo Have checked the all device Logo not shown in Firefox #467 Have fixed the Firefox browser image issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -13907,6 +13907,10 @@ margin: 0 0 12px;
         padding-top: 20px;
         padding-bottom: 20px;
     }
+    .top-logo-2 img{
+        width: 200px;
+        top: -60px;
+    }
 }
 @media only screen and (max-width: 767px) {   
 .affiliate-shop-btn{
